--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header_cabecalho">
-        <h1 class="cabecalho">Códigos que conheço</h1>
+        <h1>Códigos que conheço</h1>
     </header>
     <div class="texto_geral">
         <div>
@@ -20,32 +20,14 @@
         
         <div>
             <h1>(h1 e /h1) cabeçalho 1(min)</h1>
-        </div>
-        <div>
             <h2>(h2 e /h2) cabeçalho 2</h2>
-        </div>
-        <div>
             <h3>(h3 e /h3) cabeçalho 3</h3>
-        </div>
-        <div>
             <h4>(h4 e /h4) cabeçalho 4</h4>
-        </div>
-        <div>
             <h5>(h5 e /h5) cabeçalho 5</h5>
-        </div>
-        <div>
-            <h6>(h6 e /h6) cabeçalho 6(max)</h6>
-        </div>
-        <div>
+            <h6>(h6 e /h6) cabeçalho 6(max)</h6> 
             <p>(br)"quebra" a linha<br>assim</p>
-        </div>
-        <div>
             <p>(div e /div) cria uma nova seção<div>assim</div></p>
-        </div>
-        <div>
             <p>(img) adiciona uma imagem</p>
-        </div>
-        <div>
             <p>(a e /a) adiciona um link</p>
         </div>
         
