remodel~ção de código

--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     <header class="header_cabecalho">
         <h1>Códigos que conheço</h1>
     </header>
-    <div class="texto_geral">
+    <main>
         <div>
-            <p class="paragrafo">(p e /p)faz um parágrafo</p>
-        </div>
-        
-        <div>
+            <img src="src/images/felipe.jpg" alt="felipe quebra códigos">
+            <p>(p e /p)faz um parágrafo</p>
             <h1>(h1 e /h1) cabeçalho 1(min)</h1>
             <h2>(h2 e /h2) cabeçalho 2</h2>
             <h3>(h3 e /h3) cabeçalho 3</h3>
@@ -26,11 +24,10 @@
             <h5>(h5 e /h5) cabeçalho 5</h5>
             <h6>(h6 e /h6) cabeçalho 6(max)</h6> 
             <p>(br)"quebra" a linha<br>assim</p>
-            <p>(div e /div) cria uma nova seção<div>assim</div></p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.<br> Aut distinctio blanditiis ullam totam at odio velit, sit ratione, ut deserunt dicta quas autem saepe impedit explicabo id labore, dolore aliquid?</p>
             <p>(img) adiciona uma imagem</p>
             <p>(a e /a) adiciona um link</p>
         </div>
-        
-    </div>
+    </main>
 </body>
 </html>
